--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
         <hr />
         <h3><a href=".\public\movie-ranking.html">Movie Ranking Project</a></h3>
         <img src=".\assets\images\movie.png" height="200" alt="movie">
-        <h3><a href="\public\birthday-invite.html">Birthday Invite Project</a></h3>
+        <h3><a href=".\public\birthday-invite.html">Birthday Invite Project</a></h3>
         <img src=".\assets\images\birthday.png" height="200" alt="Bithday">
         <hr />
-        <h3><a href="\public\about.html">About Me</a> <a href=".\public\contact.html">Contact Me</a></h3>
+        <h3><a href=".\public\about.html">About Me</a> <a href=".\public\contact.html">Contact Me</a></h3>
     </body>
 </html>
+
+
+
+
+
+
 
 
 
